actually fix follow us spacing, and add whitespace nowrap

--- a/themes/cnh/sass/_front-page.scss
+++ b/themes/cnh/sass/_front-page.scss
@@ -426,7 +426,7 @@
       }
     }
 .inst-w-o-border {
-  margin-right: 0px;
+  width: 64px;
 }
     .follow-us {
       display: flex;
